--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,900&family=Poppins:wght@300;400;500;600&family=Rubik+Dirt&display=swap');
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
  background-color: black;
@@ -22,5 +21,6 @@ code {
   text-decoration: none;
 }
 a:hover{
-  color:white
+  color:white;
+  text-decoration: none;
 }
